--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,8 +75,12 @@ android {
 
     productFlavors {
         baidu {
-            manifestPlaceholders = [channel_value:"baidu"]
+            manifestPlaceholders = [channel_value: "baidu"]
         }
+    }
+
+    productFlavors.all {
+        flavor -> flavor.manifestPlaceholders = [channel_value: name]
     }
 }
 
@@ -85,4 +89,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
+    compile 'com.facebook.fresco:fresco:0.8.1+'
 }
