--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
         <!--Home-->
         <activity
-            android:name=".activity.HomeActivity"
+            android:name=".home.widget.HomeActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
@@ -30,7 +30,7 @@
             android:windowSoftInputMode="stateHidden" />
         <!--Login-->
         <activity
-            android:name=".activity.LoginActivity"
+            android:name=".login.LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
