--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.facebook.fresco:fresco:0.9.0+'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'org.sufficientlysecure:html-textview:1.3'
 }
