--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.google.code.gson:gson:2.4'
-    compile 'com.facebook.fresco:fresco:0.9.0+'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'org.sufficientlysecure:html-textview:1.3'
 }
